object/output.txt
object$ geany output.txt 
object$ g++ array02_dynamic_complexcls02.cpp 
array02_dynamic_complexcls02.cpp: In function ‘void test()’:
array02_dynamic_complexcls02.cpp:111:5: error: ‘int myArray::n’ is private within this context
  111 |   a.n = 2;
      |     ^
array02_dynamic_complexcls02.cpp:36:7: note: declared private here
   36 |   int n;
      |       ^
object$ g++ array02_dynamic_complexcls02.cpp 

